tests/src/frontend/typechecking/invalid/assignment_void.sk
fun foo(x : void, y : String): String {
  y + "ss"
}

fun main(): String {
  foo(_a = 112, "Pa")
}
